[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/game/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/game/player.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="map" parent="." instance=ExtResource( 2 )]

[node name="player" parent="map" instance=ExtResource( 3 )]

[node name="cameraAndLight" type="KinematicBody" parent="map/player"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 0
collision/layers = 1
collision/mask = 1
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001

[node name="Camera" type="Camera" parent="map/player/cameraAndLight"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.501922, 0.864914, 0, -0.864914, 0.501922, -0.0190817, 8.66147, 4.82859 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="DirectionalLight" type="DirectionalLight" parent="map/player/cameraAndLight"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.061651, 0.998098, 0, -0.998098, 0.061651, 0, 26.6498, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.5
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="level" type="Node" parent="." groups=[
"level",
]]

[node name="buttons" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 0.0
margin/right = 290.0
margin/bottom = 130.0

[node name="top" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 65.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TOP"
flat = false

[node name="bottom" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 65.0
margin/top = 65.0
margin/right = 125.0
margin/bottom = 125.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "DOWN"
flat = false

[node name="right" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 30.0
margin/right = 190.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RIGHT"
flat = false

[node name="left" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 60.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LEFT"
flat = false

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 10.0
margin/right = 58.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "back"
flat = false

[node name="rotate" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 65.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ROTATE"
flat = false

[connection signal="button_down" from="buttons/top" to="." method="_on_top_button_down"]

[connection signal="button_up" from="buttons/top" to="." method="_on_top_button_up"]

[connection signal="button_down" from="buttons/bottom" to="." method="_on_bottom_button_down"]

[connection signal="button_up" from="buttons/bottom" to="." method="_on_bottom_button_up"]

[connection signal="button_down" from="buttons/right" to="." method="_on_right_button_down"]

[connection signal="button_up" from="buttons/right" to="." method="_on_right_button_up"]

[connection signal="button_down" from="buttons/left" to="." method="_on_left_button_down"]

[connection signal="button_up" from="buttons/left" to="." method="_on_left_button_up"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="rotate" to="." method="_on_rotate_pressed"]


